# Platformer

./: Readme.md
.Panda/: assets.json  project.json
Assets/: world.pnd
Scripts/Platformer/: CMakeLists.txt  Platformer.def
Scripts/Platformer/src/: Animation.cpp  Animation.hpp  Camera.cpp  Camera.hpp  Empty.hpp  Fire.cpp  Fire.hpp  LinkInvisible.cpp  ParallaxEffect.cpp  ParallaxEffect.hpp  Player.cpp  Player.hpp
